@@ -138,5 +138,13 @@ describe "#{SCHEDULER_CLASS}#in" do
     @s.find_by_tag('spec').size.should == 1
     @s.find_by_tag('spec').first.job_id.should == job.job_id
   end
+
+  it 'raises on unknown options' do
+
+    lambda {
+      @s.in '2d', :first_at => (Time.now + 3600).to_s do
+      end
+    }.should raise_error(ArgumentError)
+  end
 end
 
